[project]
name = "aes70py"
version = "1.0.1"
authors = [
  { name="William Welliver", email="william@welliver.org" },
]
description = "AES70 controller library"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [ "promise", "zeroconf" ]

[project.urls]
Homepage = "https://github.com/aes70py"
#Issues = "https://github.com/aes70py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "src/aes70",
  "/tests",
]
exclude = [
  "*.json",
    "aes70-device-emulator",
  "venv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aes70"]
